fix(waste-statistics):  adds extra margin to half-width elements too

--- a/src/components/waste-statistics/waste-statistics.less
+++ b/src/components/waste-statistics/waste-statistics.less
@@ -39,6 +39,7 @@
 
 			@media @s-only {
 				float: none;
+				margin-bottom: @margin-double*2;
 				width: 100%;
 				text-align: center;
 			}
